--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
   "author": "Kunakorn Katasai",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.26.1",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cosine": "^0.0.1",
@@ -17,16 +17,16 @@
     "dotenv": "^16.0.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.3",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "mysql2": "^2.3.3",
+    "multer": "^1.4.5-lts.2",
+    "mysql2": "^3.14.1",
     "node-cron": "^3.0.0",
     "node-input-validator": "^4.5.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.7.2",
-    "passport": "^0.5.2",
+    "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "randomstring": "^1.3.0",
@@ -34,7 +34,7 @@
     "sequelize": "^6.17.0",
     "sharp": "^0.30.2",
     "slugify": "^1.6.5",
-    "xlsx": "^0.18.2"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
