--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.test
+.env.prod
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
