fix: update .gitignore to include topbarss directory and add .gitkeep file

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,5 @@ static/uploads/supports/*
 !static/uploads/supports/.gitkeep
 static/uploads/manages/*
 !static/uploads/manages/.gitkeep
+static/uploads/topbarss/*
+!static/uploads/topbarss/.gitkeep
